<resources>
    <string name="app_Id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_Id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_Id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="publickkey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAi0zjYfVvh/oh2CXi1l8vvP4XgMt5+6/DJmTM5dU9CIOU15jVQQonwL35QO8D0lYUENu983gteBM8isPAcNvc3A7vkJALVU5JyC0QHlmTiqPFtFU3GYOKSZ4JbvkdLawvnY6uti4Bs5Y+jDkJhesgWnaB8PUMv4ukOQWabNM2GSfM6wlppA90Xy+735O7xW9IoRTbfNevMfLW+anRIPGQlRlX3yaioUK8rpegVZF05TVOEW574Vn22pHJdS9ursy1MfM7QemJd/phZ5A6Ih4ugveMOP90FfygK9HljjjeVdCj7UVHhCVpnsvaRCvBeVdJrwqvsH3WM0gJWb9R3gp7DwIDAQAB</string>
    <string name="producti_id" translatable="false">:com.furestic.alldocument.noAd.item.purchased</string>
    <string name="privacy_policy_text" translatable="false"><![CDATA[

<p>This application needs following permissions to work properly.</p><br>
<ul>
  <li><b>Read External Storage</b></li>
  <li><b>Write External Storage</b></li>
</ul><br>
<p>Application needs these permissions to show document from phone storage.</p>
]]></string>
    <string name="privacy_policy_linkText" translatable="false"><![CDATA[
<a href="">Click here to visit privacy policy…</a>
]]></string>
    <string name="how_was_your_experience_with_us" translatable="false">How Was Your Experience With Us ?</string>
    <string name="sys_url_wxiwei" translatable="false">https://my.oschina.net/wxiwei</string>
    <string name="sys_url_internet_search" translatable="false">http://www.baidu.com</string>
    <string name="pp_url" translatable="false">https://sites.google.com/view/furesticdocumentsreader/home</string>
    <string name="app_name" translatable="false">All Document Reader</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربى</string>
    <string name="chinies" translatable="false">中文</string>
    <string name="france" translatable="false">Française</string>
    <string name="german" translatable="false">Keim</string>
    <string name="indonesian" translatable="false">bahasa Indonesia</string>
    <string name="italian" translatable="false">Italiana</string>
    <string name="polish" translatable="false">Polskie</string>
    <string name="portuguese" translatable="false">portuguesa</string>
    <string name="russian" translatable="false">русский</string>
    <string name="spanish" translatable="false">española</string>
    <string name="action_previous" translatable="false">Previous page</string>
    <string name="action_next" translatable="false">Next page</string>
    <string name="action_open" translatable="false">Open document</string>
    <string name="action_first" translatable="false">First page</string>
    <string name="action_last" translatable="false">Last page</string>
    <string name="action_zoom_out" translatable="false">Zoom out</string>
    <string name="action_zoom_in" translatable="false">Zoom in</string>
    <string name="action_rotate_clockwise" translatable="false">Rotate clockwise</string>
    <string name="action_rotate_counterclockwise" translatable="false">Rotate counterclockwise</string>
    <string name="action_jump_to_page" translatable="false">Jump to page</string>
    <string name="action_view_document_properties" translatable="false">Properties</string>
    <string name="document_properties_invalid_date" translatable="false">Invalid date</string>
    <string name="document_properties_retrieval_failed" translatable="false">Failed to obtain document metadata</string>
    <string name="invalid_mime_type" translatable="false">Cannot open file with invalid MIME type</string>
    <string name="legacy_file_uri" translatable="false">Cannot open legacy file paths from insecure apps</string>
    <string name="io_error" translatable="false">Received I/O error trying to open content</string>
    <string name="app_searchbar_failed" translatable="false">XDOCS Reader cannot find the data you are searching for</string>
    <string name="app_searchbar_reachedBegin" translatable="false">XDOCS Reader has reached the beginning of the document</string>
    <string name="app_searchbar_reachedEnd" translatable="false">XDOCS Reader has reached the end of the document</string>
    <string name="dialog_name_error" translatable="false">%s already exists.</string>
    <string name="dialog_delete_file" translatable="false">Are you sure you want to delete the selected item(s)?</string>
    <string name="dialog_move_file_error" translatable="false">You can not move or copy a folder into itself.</string>
    <string name="dialog_overwrite_file" translatable="false">Do you want to overwrite it?</string>
    <string name="sys_button_ok" translatable="false">OK</string>
    <string name="sys_button_cancel" translatable="false">Cancel</string>
    <string name="sys_button_memory_card" translatable="false">MemoryCard</string>
    <string name="sys_button_search" translatable="false">Search</string>
    <string name="sys_button_recently_files" translatable="false">Recently Files</string>
    <string name="sys_button_mark_files" translatable="false">Marked Files</string>
    <string name="sys_button_local_storage" translatable="false">Local Storage</string>
    <string name="sys_menu_settings" translatable="false">Settings</string>
    <string name="sys_menu_account" translatable="false">Account</string>
    <string name="sys_menu_register" translatable="false">Register</string>
    <string name="sys_menu_update" translatable="false">Update</string>
    <string name="sys_menu_help" translatable="false">Help</string>
    <string name="sys_menu_about" translatable="false">About</string>
    <string name="sys_search_hint" translatable="false">Search for files</string>
    <string name="sys_no_match" translatable="false">No matches.</string>
    <string name="sys_share_title" translatable="false">Sending mail…</string>
    <string name="sys_progress_message_loading" translatable="false">Loading, please wait…</string>
    <string name="file_toolsbar_create_folder" translatable="false">Create folder</string>
    <string name="file_toolsbar_rename" translatable="false">Rename</string>
    <string name="file_toolsbar_copy" translatable="false">Copy</string>
    <string name="file_toolsbar_cut" translatable="false">Cut</string>
    <string name="file_toolsbar_paste" translatable="false">Paste</string>
    <string name="file_toolsbar_delete" translatable="false">Delete</string>
    <string name="file_toolsbar_share" translatable="false">Share</string>
    <string name="file_toolsbar_sort" translatable="false">Sort</string>
    <string name="file_toolsbar_print" translatable="false">Printer</string>
    <string name="file_toolsbar_mark_star" translatable="false">Mark</string>
    <string name="file_toolsbar_unmark_star" translatable="false">UnMark</string>
    <string name="file_message_empty_directory" translatable="false">Empty Folder</string>
    <string name="app_toolsbar_hyperlink" translatable="false">Goto</string>
    <string name="app_toolsbar_find" translatable="false">Find</string>
    <string name="app_toolsbar_share" translatable="false">Share</string>
    <string name="app_toolsbar_internet_search" translatable="false">Internet Search</string>
    <string name="app_toolsbar_read" translatable="false">Read</string>
    <string name="app_toolsbar_approve" translatable="false">Approve</string>
    <string name="app_toolsbar_generated_picture" translatable="false">Generated Picture</string>
    <string name="app_toolsbar_draw" translatable="false">Draw Mode</string>
    <string name="app_toolsbar_back" translatable="false">Back</string>
    <string name="app_toolsbar_pen" translatable="false">UnDraw</string>
    <string name="app_toolsbar_pen_check" translatable="false">Draw</string>
    <string name="app_toolsbar_eraser" translatable="false">UnErase</string>
    <string name="app_toolsbar_eraser_check" translatable="false">Erase</string>
    <string name="app_toolsbar_color" translatable="false">Pen Settings</string>
    <string name="app_searchbar_backward" translatable="false">Find Backward</string>
    <string name="app_searchbar_forward" translatable="false">Find Forward</string>
    <string name="app_searchbar_find" translatable="false">Find</string>
    <string name="wp_toolsbar_switch_view" translatable="false">Switch View</string>
    <string name="wp_toolsbar_print_mode" translatable="false">Print Mode</string>
    <string name="wp_toolsbar_select_text" translatable="false">Select Text</string>
    <string name="ss_toolsbar_sheet_switch" translatable="false">Sheet Switch</string>
    <string name="pg_toolsbar_note" translatable="false">Note</string>
    <string name="pg_slideshow" translatable="false">SlideShow</string>
    <string name="pg_slideshow_pageup" translatable="false">Page Up</string>
    <string name="pg_slideshow_pagedown" translatable="false">Page Down</string>
    <string name="dialog_encoding_title">Text Encoding</string>
    <string name="dialog_folder_name">Folder Name</string>
    <string name="dialog_create_folder_error">Failed to create folder</string>
    <string name="dialog_file_name">File Name</string>
    <string name="dialog_file_rename_error">Failed to rename file</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_descending">Descending</string>
    <string name="dialog_ascending">Ascending</string>
    <string name="dialog_insufficient_memory">Unable to complete operation due to insufficient memory</string>
    <string name="dialog_system_crash_error">System crash, terminate running</string>
    <string name="dialog_format_error">File format error</string>
    <string name="dialog_old_document">The document is too old - Office 95 or older, which is not supported</string>
    <string name="dialog_parse_error">File parsing error</string>
    <string name="dialog_rtf_file">The document is really a RTF file, which is not supported</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">ALL DOCS</string>
    <string name="tab_text_3">FAVOURITES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="categories">Categories:</string>
    <string name="word">Word</string>
    <string name="Sheets">Sheets</string>
    <string name="text">Text</string>
    <string name="XML">XML</string>
    <string name="HTML">HTML</string>
    <string name="Storage">Storage:</string>
    <string name="internalStorage">Internal Storage</string>
    <string name="slides">Slides</string>
    <string name="wordFile">Word Files</string>
    <string name="excelFiles">Excel Files</string>
    <string name="powerPointFiles">Powerpoint Files</string>
    <string name="txtFiles">Text Files</string>
    <string name="xmlFiles">XML Files</string>
    <string name="htmlFiles">HTML Files</string>
    <string name="AddToFvrt">Add to Favourites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="TermsAndCo">TERMS AND CONDITIONS</string>
    <string name="exit">Exit</string>
    <string name="decline">Decline</string>
    <string name="Accept">Accept</string>
    <string name="headingPolicy">Privacy Policy</string>
    <string name="pdf_files">PDF Files</string>
    <string name="html_files">HTML Files</string>
    <string name="word_files">Word Files</string>
    <string name="text_files">Text Files</string>
    <string name="splashAppName">All Document Reader</string>
    <string name="splashBottomTExt">Best Document Reader App</string>
    <string name="cancel">Cancel</string>
</resources>