<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:showAsAction="never"-->
    <!--android:title="@string/action_settings"/>-->


    <item
        android:id="@+id/action_zoom_out"
        android:icon="@drawable/ic_zoom_out_white_24dp"
        android:title="@string/action_zoom_out"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_zoom_in"
        android:icon="@drawable/ic_zoom_in_white_24dp"
        android:title="@string/action_zoom_in"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_first"
        android:icon="@drawable/baseline_first_page_24"
        android:title="@string/action_first"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_last"
        android:icon="@drawable/baseline_last_page_24"
        android:title="@string/action_last"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_jump_to_page"
        android:icon="@drawable/ic_pageview_white_24dp"
        android:title="@string/action_jump_to_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rotate_clockwise"
        android:icon="@drawable/ic_rotate_right_white_24dp"
        android:title="@string/action_rotate_clockwise"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rotate_counterclockwise"
        android:icon="@drawable/ic_rotate_left_white_24dp"
        android:title="@string/action_rotate_counterclockwise"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_document_properties"
        android:title="@string/action_view_document_properties"
        app:showAsAction="never" />

</menu>
