<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    tools:context=".activities.ActivityPrivacyPolicy">
    <include
        android:id="@+id/acPrivacyPolicy_toolbar"
        layout="@layout/toolbar_custom" />
    <LinearLayout
        android:id="@+id/pp_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_privacy_policy_card">

            <TextView
                android:id="@+id/privacy_policy_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/headingPolicy"
                android:textColor="@color/colorSkyBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acPrivacyPolicy_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy_policy_heading"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/headingPolicy"
                android:textColor="@color/colorBLack"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/acPP_btnDecline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/decline"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:gravity="center"
                />
            <Button
                android:id="@+id/acPP_btnAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/Accept"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/lock"
        android:layout_centerInParent="true"
        android:layout_above="@+id/pp_root"
        android:layout_marginBottom="-20dp"

        />

</RelativeLayout>